--- a/passwordReset.html
+++ b/passwordReset.html
@@ -97,7 +97,7 @@
                                                                     <tr>
                                                                         <td
                                                                             style="box-sizing: border-box; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; word-break: break-word;">
-                                                                            <a href="http://localhost:5000/reset"
+                                                                            <a href="http://localhost:5000/reset?token={{TOKEN}}"
                                                                                 class="button button--green"
                                                                                 target="_blank"
                                                                                 style="-webkit-text-size-adjust: none; background: #22BC66; border-color: #22bc66; border-radius: 3px; border-style: solid; border-width: 10px 18px; box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16); box-sizing: border-box; color: #FFF; display: inline-block; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; text-decoration: none;">Reset
